set basic html and css for pokequiz, team generator, wtp, and rotodex modules. set github link add in SVGs fix rotom breaking out of screen

--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@
   --spacing-lg: 24px;
   --spacing-xl: 32px;
 
+  --font-size-xs: 14px;
   --font-size-sm: 16px;
   --font-size-md: 26px;
   --font-size-lg: 42px;
@@ -181,6 +182,7 @@ xxl: 1400px */
 
 html {
   font-size: 16px;
+  font-family: "Sora";
 }
 a {
   color: unset;
@@ -198,6 +200,16 @@ button {
 
 body {
   background-image: url("./assets/dot-grid.webp");
+}
+h1 {
+  display: flex;
+  flex-direction: column;
+  font-size: var(--font-size-xl);
+  padding: var(--spacing-md);
+}
+
+h2 {
+  font-size: var(--font-size-lg);
 }
 * {
   box-sizing: border-box;
@@ -269,7 +281,6 @@ body {
   width: 100%;
 }
 .header__nav-link {
-  font-family: "Sora";
   transition: all 0.35s ease-out;
   padding: var(--spacing-sm);
 }
@@ -283,23 +294,13 @@ body {
   background-color: var(--primary-fixed-dim);
 }
 
-/* homepage__main */
-
-.homepage__main {
-}
-
-h1 {
-  display: flex;
-  flex-direction: column;
-  font-size: var(--font-size-xl);
-  padding: var(--spacing-md);
-}
+/* #region homepage__main */
 
 .homepage__hero-bottom {
   margin-top: var(--spacing-md);
   background-color: var(--primary-container);
   transform: rotate(-3deg);
-  box-shadow: 8px 4px 0px 0px rgba(0, 0, 0, 1);
+  box-shadow: 8px 4px 0px 0px var(--inverse-surface);
   border: 5px solid black;
   padding: var(--spacing-md) var(--spacing-sm);
   width: fit-content;
@@ -310,26 +311,107 @@ h1 {
   font-weight: bold;
   margin: var(--spacing-lg);
   padding: var(--spacing-md) var(--spacing-lg);
-  box-shadow: 8px 4px 0px 0px rgba(0, 0, 0, 1);
+  box-shadow: 8px 4px 0px 0px var(--inverse-surface);
   border: 5px solid black;
-  font-size: var(--font-size-md);
 }
 .homepage__hero-img {
   display: block;
   margin-inline: auto;
+  width: 400px;
 }
+/* #endregion homepage__main */
 
 /* modules */
 
 .modules__grid {
   display: grid;
+  gap: var(--spacing-lg);
   padding: var(--spacing-lg);
 }
 
 .modules__box {
-  box-shadow: 8px 4px 0px 0px rgba(0, 0, 0, 1);
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-md);
+  box-shadow: 8px 4px 0px 0px var(--inverse-surface);
   border: 5px solid black;
-  padding: var(--spacing-md);
+  padding: var(--spacing-xl);
+}
+
+.modules__wtp {
+  background-color: var(--primary-container);
+}
+.modules__wtp-black-box {
+  background-color: #000000;
+  color: #ffffff;
+  width: fit-content;
+  padding: var(--spacing-sm) var(--spacing-md);
+}
+
+.modules__wtp button {
+  background-color: var(--surface-dim);
+  padding: var(--spacing-sm) var(--spacing-md);
+  width: fit-content;
+  box-shadow: 8px 4px 0px 0px var(--inverse-surface);
+  border: 5px solid black;
+  font-weight: bold;
+}
+
+.modules__wtp img {
+  display: block;
+  margin-inline: auto;
+  height: 250px;
+}
+
+.modules__quiz {
+  background-color: var(--electric-blue);
+}
+
+.modules__quiz-smalltext {
+  box-shadow: 8px 4px 0px 0px var(--inverse-surface);
+  border: 5px solid black;
+  padding: var(--spacing-xs) var(--spacing-md);
+  background-color: var(--inverse-on-surface);
+  width: fit-content;
+}
+
+.modules__team {
+  background-color: var(--secondary-container);
+}
+.modules__team img {
+  align-self: center;
+  width: 350px;
+  margin: var(--spacing-md) 0;
+}
+
+.modules__rotodex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: var(--acid-green);
+}
+.modules__rotodex-left {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-md);
+}
+.modules__rotodex p {
+  padding: var(--spacing-md) 0;
+}
+.rotodex-img {
+  height: 200px;
+  width: 200px;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  background-color: var(--paper-white);
+  border-top: 10px solid black;
+  box-shadow: 8px 4px 15px 0px rgba(0, 0, 0, 1);
+  height: 100px;
 }
 
 /* xs: 0,
